--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <!-- My links: -->
+  <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
 </head>
 
+  <div class="navBar">
+    <a class="active" href="index.html">Home</a>
+    <!-- type *page2name.html where href info goes -->
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  
 <body>
-  Hello world
+  <div class="inBody">
+    
+  </div>
+  
   <script src="script.js"></script>
 </body>
+
+<footer>
+  <p>© Kebbab</p>
+</footer>
 
 </html>
