--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 </body>
 
 <footer>
-  <p>© Kebbab</p>
+    <div class="FlexL">
+     <p>Kebbab</p>
+    </div>
+    <div class="FlexR">
+      <p>© Kebbab</p>
+    </div>
 </footer>
 
 </html>
