--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 
   <div class="navBar">
+    <table>
+      <tr>
+        <td>
+          
+        </td>
+      </tr>
+    </table>
+    
     <a class="active" href="index.html">Home</a>
     <!-- type *page2name.html where href info goes -->
     <a href="#news">News</a>
@@ -28,7 +36,7 @@
 
 <footer>
     <div class="FlexL">
-     <p>Kebbab</p>
+     <h1>Kebbab</h1>
     </div>
     <div class="FlexR">
       <p>© Kebbab</p>
