Pabeigta sudzibas lapa (izņemot logo navbarā)

--- a/Sudzeties.html
+++ b/Sudzeties.html
@@ -41,22 +41,12 @@
     <table>
       <tr>
         <td>
-          <p class="sueustxt">Vārds:</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <input type="text" id="name" name="name">
-        </td>
-      </tr>
-      <tr>
-        <td>
           <p class="sueustxt">E-pasts:</p>
         </td>
       </tr>
       <tr>
         <td>
-          <input type="text" id="email" name="email">
+          <input id="email" type="email" value="Raksti Šeit">
         </td>
       </tr>
       <tr>
@@ -66,17 +56,17 @@
       </tr>
       <tr>
         <td>
-          <textarea id="text" name="text" rows="4" cols="50"></textarea>
+          <input id="text" type="text" value="Raksti Šeit"></input>
         </td>
       </tr>
     </table>
-    <button onclick="sudziba()">Try it</button>
+    <button onclick="sudziba()">Sūtīt</button>
   </div>
 
   <script src="script.js"></script>
 </body>
 
-<footer>
+<footer id="fsue">
     <div class="FlexL">
      <h1>Kebbab</h1>
     </div>
