Pabeidzu LogIn.html (izņemot logo navbarā) un pielaboju Sūdzības lapu.

--- a/Sudzeties.html
+++ b/Sudzeties.html
@@ -29,7 +29,7 @@
           <a class="OthPages" href="#about">Par mums</a>
         </td>
         <td>
-          <a class="OthPages" href="#about"><img src="Pictures/Acc.png" width="70px" height="70px"></a>    
+          <a class="OthPages" href="LogIn.html"><img src="Pictures/Acc.png" width="70px" height="70px"></a>    
         </td>
       </tr>
     </table>
@@ -41,22 +41,22 @@
     <table>
       <tr>
         <td>
-          <p class="sueustxt">E-pasts:</p>
+          <p class="sueustxt">E-pasts</p>
         </td>
       </tr>
       <tr>
         <td>
-          <input id="email" type="email" value="Raksti Šeit">
+          <input id="email" type="email" placeholder="Raksti Šeit">
         </td>
       </tr>
       <tr>
         <td>
-          <p class="sueustxt">Sūdzības teksts:</p>
+          <p class="sueustxt">Sūdzības teksts</p>
         </td>
       </tr>
       <tr>
         <td>
-          <input id="text" type="text" value="Raksti Šeit"></input>
+          <input id="text" type="text" placeholder="Raksti Šeit"></input>
         </td>
       </tr>
     </table>
@@ -66,7 +66,7 @@
   <script src="script.js"></script>
 </body>
 
-<footer id="fsue">
+<footer id="fsueorlog">
     <div class="FlexL">
      <h1>Kebbab</h1>
     </div>
