--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="OthPages" href="#about">Par mums</a>
         </td>
         <td>
-          <a class="OthPages" href="#about"><img src="Pictures/Acc.png" width="70px" height="70px"></a>    
+          <a class="OthPages" href="LogIn.html"><img src="Pictures/Acc.png" width="70px" height="70px"></a>    
         </td>
       </tr>
     </table>
