Salaboju kļudu pieliekot nosaukumam funkcijai abās vietās burtu "a"... ???

--- a/LogIn.html
+++ b/LogIn.html
@@ -11,7 +11,7 @@
   <link href='https://fonts.googleapis.com/css?family=Just Another Hand' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
-
+  <body>
   <div class="navBar">
 
     <img id="logo" src='https://media.istockphoto.com/id/1128826884/vector/no-image-vector-symbol-missing-available-icon-no-gallery-for-this-moment.jpg?s=612x612&w=0&k=20&c=390e76zN_TJ7HZHJpnI7jNl7UBpO3UP7hpR2meE1Qd4=' width="200px" height="70px">
@@ -36,7 +36,7 @@
 
   </div>
 
-<body>
+
   <div class="inBodySue">
     <table>
       <tr>
@@ -60,10 +60,10 @@
         </td>
       </tr>
     </table>
-    <button onclick="ieiet()">Ieiet</button>
+    <button onclick="aieiet()">Ieiet</button>
   </div>
-  <script src="./script.js"></script>
-</body>
+  <script src="script.js"></script>
+
 
 <footer id="fsueorlog">
     <div class="FlexL">
@@ -74,5 +74,5 @@
     </div>
 </footer>
   
-  
+  </body>
 </html>
