Pievienoju logo visām lapām

--- a/LogIn.html
+++ b/LogIn.html
@@ -14,7 +14,7 @@
   <body>
   <div class="navBar">
 
-    <img id="logo" src='https://media.istockphoto.com/id/1128826884/vector/no-image-vector-symbol-missing-available-icon-no-gallery-for-this-moment.jpg?s=612x612&w=0&k=20&c=390e76zN_TJ7HZHJpnI7jNl7UBpO3UP7hpR2meE1Qd4=' width="200px" height="70px">
+    <img id="logo" src='logo.png' width="200px" height="70px">
 
     <table>
       <tr>
