--- a/Sudzeties.html
+++ b/Sudzeties.html
@@ -14,9 +14,9 @@
 
   <div class="navBar">
 
-    <img id="logo" src='logo.png' width="200px" height="70px">
+    <img id="logo" src='logon.png' width="200px" height="70px">
 
-    <table>
+    <table class="navtxt">
       <tr>
         <td>
           <a class="OthPages" href="index.html">Sākums</a>
