--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   
   <div class="navBar">
     
-    <img id="logo" src='logo.png' width="200px" height="70px">
+    <img id="logo" src='logon.png' width="200px" height="70px">
     
-    <table>
+    <table class="navtxt">
       <tr>
         <td>
           <a class="OthPages" class="active" href="index.html">Sākums</a>
