Started making body in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
   
 <body>
   <div class="inBody">
-    
+    <div class="textBox1" width="540px" height="370px">
+      <img src="YellowBall.png" width="596px" id="YB1"/>
+      Laipni lūdzam Kebbab, kur mēs gatavojam izcilāko un garšīgāko kebabu. Mūsu aizraušanās ar kvalitāti un garšu mudina mūs iegūt labākās sastāvdaļas un radīt garšīgus ēdienus, kas apmierinās visas vēlmes. Neatkarīgi no tā, vai izbaudāt ātru kumosiņu vai sātīgu maltīti, mēs apsolām gardu pieredzi katrā kumosā. Pievienojieties mums, lai svinētu kebabu gatavošanas mākslu – ar mīlestību, tradīcijām un vislabākajām garšām!
+    </div>
   </div>
   
   <script src="script.js"></script>
