--- a/Sudzeties.html
+++ b/Sudzeties.html
@@ -66,7 +66,7 @@
   <script src="script.js"></script>
 </body>
 
-<footer id="fsueorlog">
+<footer class="smallfoot">
     <div class="FlexL">
      <h1>Kebbab</h1>
     </div>
