Pabeidzu menu.html

--- a/menu.html
+++ b/menu.html
@@ -39,11 +39,34 @@
 
 <body>
   <div class="inBody">
-
+    
+    <div class="textBox2" width="1661px" height="2377px">
+    <p>Megakebabs<br/>Cena: 12,99 EUR<br/>Gigantisks kebabs ar desmit dažādām gaļām – vistas, liellopa, jēra, pīles, tītara, jūras veltēm, desiņām, kūpinātu gaļu, speķi un dārzeņiem. Pārsteigums katrā kumosā!
+      <br/><br/>
+    Džungļu Karalis<br/>Cena: 10,50 EUR<br/>Jēra gaļa, vistas fileja un pīles krūtiņa – viss uz ogļu grila, pasniegts uz karsta pita ar pikantu jogurta mērci, ceptiem dārzeņiem un riekstiem.
+      <br/><br/>
+    Skrējējs<br/>Cena: 9,50 EUR<br/>Spēcīga kombinācija ar asu mērci – vistas, liellopa un jēra gaļa, papildināta ar tomātiem, sīpoliem, pipariem un salātiem. Ideāls ātrai ēšanai.
+      <br/><br/>
+    Kebaba Tornado<br/>Cena: 15,99 EUR<br/>Milzīgs kebabs, ko var ēst divi cilvēki vienlaikus. Ar četrām dažādām gaļām, svaigiem dārzeņiem, un ķiploku mērci. Izaicinājums, kuru ne visi varēs uzvarēt!
+      <br/><br/>
+    Vegetārais Virsotnes Kebabs<br/>Cena: 8,00 EUR<br/>Grilēti dārzeņi (cukini, baklažāni, paprika), humuss, falafels un tofu, pasniegts ar kvinoju un zāļu mērci. Ideāls gardēžiem, kas izvēlas gaļas alternatīvas.
+      <br/><br/>
+    Kebaba Karaoke<br/>Cena: 11,50 EUR<br/>Aizraujošs piedāvājums – no grilētas vistas un jēra gaļas, papildināts ar sīpoliem, tomātiem, ķiploku majonēzi un salātiem. Kamēr ēd, piedalies mūsu "Kebaba Karaoke" un dziedā par labākajiem kebabiem pilsētā!
+      <br/><br/>
+    Krievu Ruletes Kebabs<br/>Cena: 13,00 EUR<br/>Noslēpumainā izvēle – dažādi gaļas veidi un dārzeņi, bet viens no tiem ir pilnīgi neēdams (piemēram, pārāk asā mērcē iemērkts pipars). Spēlējiet to kā ruleti!
+      <br/><br/>
+    Kebabārs ar Mērci<br/>Cena: 10,00 EUR<br/>Klasisks kebabs ar liellopa gaļu, kas pārklāts ar speciāli gatavotu čili ķiploku mērci. Pievienots kraukšķīgs pita maize un svaigi salāti.
+      <br/><br/>
+    Mega Desert Kebab<br/>Cena: 7,50 EUR<br/>Saldu mīklu pildījums ar šokolādi un riekstiem, apceptu un pasniegtu ar vaniļas krēmu un augļiem. Dīvainais desertu kebabs, kuru neviens negaidīja!
+      <br/><br/>
+    Kebaba "Pārdrošais Pāris"<br/>Cena: 14,50 EUR<br/>Divi dažādi kebabi uz viena šķīvja – viens ar grilētu liellopu, otrs ar vistas gaļu, pasniegti kopā ar speciālu "Pārdrošā pāra" mērci, kurai ir noslēpumainas garšas! Padariet šo ēdienu par savas vakariņas izaicinājumu!
+</p>
+      </div>
+    
   <script src="script.js"></script>
   </body>
 
-<footer class="smallfoot">
+<footer class="menufoot">
     <div class="FlexL">
      <h1>Kebbab</h1>
     </div>
