--- a/LogIn.html
+++ b/LogIn.html
@@ -20,13 +20,12 @@
       <tr>
         <td>
           <a class="OthPages" href="index.html">Sākums</a>
-          <!-- type *page2name.html where href info goes -->
-          <a class="OthPages" href="#news">Promokodi</a>
-          <a class="OthPages" href="#contact">Menu</a>
-          <a class="OthPages" href="#about">Galerija</a>
+          <a class="OthPages" href="promokodi.html">Promokodi</a>
+          <a class="OthPages" href="menu.html">Menu</a>
+          <a class="OthPages" href="galerija.html">Galerija</a>
           <a class="OthPages" href="Sudzeties.html">Sūdzēties</a>
-          <a class="OthPages" href="#contact">Kontakti</a>
-          <a class="OthPages" href="#about">Par mums</a>
+          <a class="OthPages" href="Kontakti.html">Kontakti</a>
+          <a class="OthPages" href="parmums.html">Par mums</a>
         </td>
         <td>
           <a class="OthPages" class="active" href="LogIn.html"><img src="Pictures/Acc.png" width="70px" height="70px"></a>    
