--- a/promokodi.html
+++ b/promokodi.html
@@ -21,10 +21,9 @@
       <tr>
         <td>
           <a class="OthPages" href="index.html">Sākums</a>
-          <!-- type *page2name.html where href info goes -->
-          <a class="OthPages" href="promokodi.html">Promokodi</a>
+          <a class="OthPages" class="active" href="promokodi.html">Promokodi</a>
           <a class="OthPages" href="menu.html">Menu</a>
-          <a class="OthPages" class="active" href="galerija.html">Galerija</a>
+          <a class="OthPages" href="galerija.html">Galerija</a>
           <a class="OthPages" href="Sudzeties.html">Sūdzēties</a>
           <a class="OthPages" href="Kontakti.html">Kontakti</a>
           <a class="OthPages" href="parmums.html">Par mums</a>
