--- a/galerija.html
+++ b/galerija.html
@@ -39,10 +39,51 @@
 <body>
   <div class="inBody">
 
+<table id="galtable">
+  <tr class="nob">
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_1.png" width="400px" height="600px">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_2.png" width="400px" height="600px">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_3.png" width="400px" height="600px">
+    </td>
+  </tr>
+  <tr class="nob">
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_4.png" width="400px" height="600px">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_5.png" width="400px" height="600px">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_6.png" width="400px" height="600px">
+    </td>
+  </tr>
+  <tr class="nob">
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_7.png" width="400px" height="600px">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_8.png" width="400px" height="600px">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_9.png" width="400px" height="600px">
+    </td>
+  </tr>
+</table>
+
+    <div id="w">
+      <img src="Pictures/a.png" height="315" class="yt"/>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/0wTIQa6RluE?si=oo5VZoNmQNZmeNjR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" class="yt" allowfullscreen></iframe>
+    </div>
+    
   <script src="script.js"></script>
   </body>
 
-<footer class="smallfoot">
+<footer class="galfoot">
     <div class="FlexL">
      <h1>Kebbab</h1>
     </div>
