Pabeidzu aboutus lapu

--- a/galerija.html
+++ b/galerija.html
@@ -42,35 +42,35 @@
 <table id="galtable">
   <tr class="nob">
     <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_1.png" width="400px" height="600px">
+      <img src="Pictures/kebbab_image_3x3_1.png" width="400px" height="600px" class="img">
     </td>
     <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_2.png" width="400px" height="600px">
+      <img src="Pictures/kebbab_image_3x3_2.png" width="400px" height="600px" class="img">
     </td>
     <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_3.png" width="400px" height="600px">
-    </td>
-  </tr>
-  <tr class="nob">
-    <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_4.png" width="400px" height="600px">
-    </td>
-    <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_5.png" width="400px" height="600px">
-    </td>
-    <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_6.png" width="400px" height="600px">
+      <img src="Pictures/kebbab_image_3x3_3.png" width="400px" height="600px" class="img">
     </td>
   </tr>
   <tr class="nob">
     <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_7.png" width="400px" height="600px">
+      <img src="Pictures/kebbab_image_3x3_4.png" width="400px" height="600px" class="img">
     </td>
     <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_8.png" width="400px" height="600px">
+      <img src="Pictures/kebbab_image_3x3_5.png" width="400px" height="600px" class="img">
     </td>
     <td class="nob">
-      <img src="Pictures/kebbab_image_3x3_9.png" width="400px" height="600px">
+      <img src="Pictures/kebbab_image_3x3_6.png" width="400px" height="600px" class="img">
+    </td>
+  </tr>
+  <tr class="nob">
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_7.png" width="400px" height="600px" class="img">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_8.png" width="400px" height="600px" class="img">
+    </td>
+    <td class="nob">
+      <img src="Pictures/kebbab_image_3x3_9.png" width="400px" height="600px" class="img">
     </td>
   </tr>
 </table>
