--- a/parmums.html
+++ b/parmums.html
@@ -38,11 +38,20 @@
 
 <body>
   <div class="inBody">
-
+    <div class="textBox3" width="1661px" height="2377px">
+      <h2 id="h2">Kebaba Vēsture<h2>
+      <p>Restorāns "Kebbab" atradās nelielā ieliņā, kur daži cilvēki zināja, ka tas ir īstais vietas noslēpums. Bet citi to uzskatīja par pilnīgu dīvainību – kas tas par vietu, kas piedāvā tikai kebabus? "Kebbab" bija pazīstams ar savu īpašo stilu, kas apvienoja piedāvājumu "ļoti daudz gaļas" un pārsteidzošus komiskus brīžus. Visi, kas iegāja, ātri saprata, ka šeit notiek kaut kas neparasts. <br/>
+      Tā kā restorāna īpašnieks, Harijs, bija ļoti entuziasma pilns par kebabiem, viņš bija izdomājis rituālu. Katram apmeklētājam bija jāizvēlas savs kebabs ar noslēpumainu nosaukumu. Viņi varēja izvēlēties "Džungļu Karali" (ar desmitiem veidu gaļas) vai "Skrējēju" (ar visām garšvielām, kas pastāv). Bet galvenais jautājums bija: kāds būs nākamais klients? Harijs savāktā secībā vēlējās noskaidrot, kas viņiem visiem piedāvās uzvaru šajā neparastajā spēlē.<br/>
+      Lai gan dažiem apmeklētājiem nebija nekādu ilūziju par to, kas viņus sagaidīs, citi nemitīgi centās atminēt, kāda būs nākamā piedāvātā gaļa. Viens klients pat sākotnēji pieņēma, ka viņam pasniegs kebabu ar zivīm, bet tā vietā viņam tika piedāvāts "Megakebabs", kas bija tik liels, ka viņš vienkārši nevarēja to izēst bez komiskām, gandrīz drāmatiskām situācijām.<br/>
+      Reiz, kad Harijs bija sagatavojis pavisam jaunu ķēdē izstrādātu, "Tornado" nosaukto kebabu, viņš izdomāja, ka tas būs viņa pēdējais triks. "Tornado" patiešām bija izveidots tā, lai no viena šķīvja varētu vienlaikus ēst divi cilvēki, kas sēdēja vienā galda pusē. Kāds pāris negribot sāka sacensties, kurš varēs ātrāk apēst savu daļu. Drīz tas pārtapa par veselu komisku cīņu, kur cilvēki norakstīja savus apģērbus un pieļāva visneiedomājamākās kļūdas, tikai lai iegūtu daļu no "Tornado".<br/>
+      Kad restorāns sākotnēji nonāca slavas zenītā, "Kebbab" piedzīvoja īstu drāmu. Viens no klientiem, kuru nosauca par Steparu, piedāvāja ideju, ka viņi izveidos "Kebaba Karaoke". Tā bija neparasta izvēle, taču cilvēki šo ideju apsvēra nopietni. Tā rezultātā kāds cilvēks pat mēģināja dziedāt “We Are the Champions” uz ēšanas zvana ritma, kamēr viņa mutes pilnas ar kebabu. Tas bija biedējoši un smieklīgi vienlaikus, un no tā brīža "Kebbab" kļuva par pilnīgu pilsētas leģendu.<br/>
+      Pēdējā stāsta daļa? Kāds vīrs, kurš bija apmeklējis "Kebbab" jau vairākas reizes, beidzot atklāja, ka viņš īstenībā ir izstrādājis "Kebaba vēsturi". Viņš nolēma izveidot jaunu kebaba veidu - “Krievu ruleti”, kurā iekšā bija viena neēdama sastāvdaļa. Kad cilvēki to mēģināja, viņi piedzīvoja sajūtu, kāda bija tikai pirms 500 gadiem, kad kebabi vēl nebija izgudroti. Visbeidzot, restorāns kļuva par vietu, kur komēdijas un drāmas sajaucās ar gastronomiju tā, kā nevienam nebija iedomājies.</p>
+        </div>
   <script src="script.js"></script>
+  </div>
   </body>
 
-<footer class="smallfoot">
+<footer class="menufoot">
     <div class="FlexL">
      <h1>Kebbab</h1>
     </div>
