--- a/Kontakti.html
+++ b/Kontakti.html
@@ -38,11 +38,13 @@
 
 <body>
   <div class="inBody">
-
+<div class="textBox4">
+  <p id="tl">Telefona nummurs: 230405050505050505021302130032103120304234</p>
+</div>
   <script src="script.js"></script>
   </body>
 
-<footer class="smallfoot">
+<footer class="smalllfoot">
     <div class="FlexL">
      <h1>Kebbab</h1>
     </div>
